fix(importers/epub): fix trag-bot comments